fix: test sp menu overflow

--- a/components/common/SiteHeader/SiteHeader.module.css
+++ b/components/common/SiteHeader/SiteHeader.module.css
@@ -14,14 +14,15 @@
 .smallLogo {
   @apply absolute z-20 flex justify-center w-full leading-none md:relative;
   padding-top: 12px;
+  padding-bottom: 15px;
   & a {
     @apply block;
     width: 150px;
   }
   @screen md {
-    @apply block w-0 overflow-hidden flex-none md:py-0;
+    @apply block w-0 overflow-hidden flex-none py-0;
     &.hasShownSmallLogo {
-      @apply duration-100 md:pl-site-vertical-md;
+      @apply duration-100 pl-site-vertical-md;
       width: 25%;
     }
     & a {
