--- a/components/common/SiteHeaderNavigation/SiteHeaderNavigation.module.css
+++ b/components/common/SiteHeaderNavigation/SiteHeaderNavigation.module.css
@@ -6,8 +6,11 @@
   @screen less-than-md {
     &.hasShownMenuForMobile {
       --header-height: calc(60px - theme('borderWidth.DEFAULT') * 2);
-      @apply fixed z-10 top-0 bottom-0 left-0 right-0 bg-white flex flex-col border border-green overflow-auto;
+      @apply fixed z-10 top-0 bottom-0 left-0 right-0 bg-white flex flex-col border border-green;
       padding-top: var(--header-height);
+      & .menuList {
+        @apply h-full overflow-auto;
+      }
     }
   }
 }
